# tlkcore-examples

./: .gitignore  README.md
.archive/example_Windows/BBoard/MatLab/: BBoxCtrler.m
.archive/pre-install/Python/: Setup.bat
.archive/release/: ReleaseNote.html  ReleaseNote.md
.github/: issue_template.md  pull_request_template.md
example/BBoard Series/C#/: README.md
example/BBoard Series/C++/: README.md
example/BBoard Series/MatLab/: BBoxCtrler.m  README.md  main.m
example/BBoard Series/Python/: BBoard_DEMO.py  README.md
example/BBoxLite Series/C#/: README.md
example/BBoxLite Series/C++/: README.md
example/BBoxLite Series/LabVIEW/: BBoxLite.aliases  BBoxLite.html  BBoxLite.lvlps  BBoxLite.lvproj  BBoxLite.vi  BBoxLite28A.vi  BeamTableEditor.vi  FastBeamMode.vi  README.md
example/BBoxLite Series/Python/: BBOXLITE_BeamSteering_DEMO.py  BBOXLITE_ChannelControl.py  BBOXLITE_DEMO.py  README.md
example/BBoxOne Series/C#/: README.md
example/BBoxOne Series/C++/: README.md
example/BBoxOne Series/LabVIEW/: BBoxOne.html  BBoxOne.vi  BBoxOne28A.vi  BBoxOneLabViewTest.aliases  BBoxOneLabViewTest.lvlps  BBoxOneLabViewTest.lvproj  BeamTableEditor.vi  FastBeamMode.vi  README.md  Untitled Library 1.lvlib
example/BBoxOne Series/Linux/examples/: CMakeLists.txt  README.md
example/BBoxOne Series/Linux/examples/include/: usrp_fbs.hpp
example/BBoxOne Series/MatLab/: BBoxCtrler.m
example/BBoxOne Series/Python/: BBoxOne_DEMO.py  README.md
example/C++/ConsoleApplication1/: ConsoleApplication1.sln  README.md
example/CSharp/: ConsoleApp1.sln  README.md
example/CSharp/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
example/LabView2015/: BBoxOneLabViewTest.aliases  BBoxOneLabViewTest.lvlps  BBoxOneLabViewTest.lvproj  BBoxOneLabViewTest.vi  README.md
example/LabView2015/files/: B19175000-24.csv
example/LabView2019/: BBoxOneLabViewTest.aliases  BBoxOneLabViewTest.lvlps  BBoxOneLabViewTest.lvproj
example/LabView2019_BBoxLite/: BBoxLiteLabViewTest.lvproj
example/LabView2019_BBoxLite/files/: B19138000-24.csv  B19483200-24.csv
example/Python/: BBOXLITE28A_BeamSteering_DEMO.py  BBOXLITE28A_ChannelControl_DEMO.py  BBOXLITE28A_Sample.py  BBOXLITE_BeamSteering.py  BBOXLITE_BeamSteering_DEMO.py  BBOXLITE_ChannelControl.py  BBOXLITE_ChannelControl_DEMO.py  BBOXLITE_Control_Interface.py  BBoxOne_BeamSteering.py  BBoxlite_BeamSteering.py  Control_Interface.py  NLog.config  README.md
example/Python/files/: AAKIT.csv  B19492600-24_28GHz.csv  D20462000-28_28GHz.csv
example/Python/pythonnet_installation/: lib_install.bat
example/UDBox/LabVIEW/: UDBox5G.aliases  UDBox5G.lvproj  UDBox5G.vi  UDBox5G_sample.vi
example/UDBox/LabVIEW2023/: UDBox5G.vi
example/UDBox/Python/: NLog.config  README.md  UD_SetFreq.py
example_Linux/: README.md
example_Linux/CSharp/: README.md
example_Linux/CSharp/TLKCoreExample/: TLKCoreExample.sln
example_Linux/C_C++/: README.md
example_Linux/C_C++/examples/: CMakeLists.txt  README.md  logging.conf  tlkcore_fbs.cpp
example_Linux/C_C++/examples/config/: CustomBatchBeams_D2252E058-28.csv
example_Linux/C_C++/examples/include/: tlkcore_lib.hpp
example_Linux/C_C++/examples/lib/: TMYPublic.py
example_Linux/C_C++/lib_tlkcore_cpp/: README.md
example_Linux/C_C++/lib_usrp_spi/: CMakeLists.txt  README.md  usrp_fbs.cpp
example_Linux/LabVIEW/: README.md
example_Linux/LabVIEW/2021_64bit/: BBox.vi  TLKCore.lvproj
example_Linux/MATLAB/: README.md  table.css
example_Linux/Python/: README.md
example_Linux/examples/: logging.conf  tlkcore_fbs.cpp
example_Linux/examples/config/: device.conf
example_Linux/examples/files/: AAKIT_TMYTEK-4x4_ONE_28_IDEAL.csv  AAKIT_TMYTEK_28ONE_4x4_C2104L020-28.csv
example_Linux/examples/lib/: TMYBeamConfig.py  TMYConfig.py  TMYPublic.py
example_Linux/lib_tlkcore_cpp/: requirements.txt
example_Linux/lib_tlkcore_cpp/include/: tlkcore_lib.hpp
example_Linux/lib_usrp_spi/: LICENSE.md  README.md
example_Windows/BBoard Series/Python/: BBoard_DEMO.py
example_Windows/BBoxLite Series/LabVIEW/: BBoxLite.aliases  BeamTableEditor.vi  NLog.config
example_Windows/BBoxLite Series/Python/: BBoxLite_ChannelSwitchControl.py  BBoxLite_Control_Interface.py
example_Windows/BBoxLite/C#/: README.md
example_Windows/BBoxLite/LabVIEW/: BBoxLite.lvproj  FastBeamMode.vi
example_Windows/BBoxLite/Python/: BBoxLite_BeamSteering_DEMO.py  README.md
example_Windows/BBoxOne Series/Python/: NLog.config
example_Windows/BBoxOne/LabVIEW/: BBoxOne.vi  BBoxOneLabViewTest.lvproj
example_Windows/BBoxOne/MatLab/: main.m
example_Windows/BBoxOne/Python/: BBoxOne_DEMO.py
example_Windows/UDBox/LabVIEW2023/: UDBox5G.lvproj
examples/CSharp/: README.md
examples/CSharp/TLKCoreExample/: ExampleMain.cs  TLKCoreExample.csproj  logging.conf  packages.config
examples/C_Cpp/: README.md
examples/C_Cpp/examples/: LICENSE.md  README.md  device.conf  logging.conf  tlkcore_fbs.cpp
examples/C_Cpp/lib_tlkcore_cpp/: CMakeLists.txt  LICENSE.md  README.md  requirements.txt
examples/C_Cpp/lib_tlkcore_cpp/include/: tlkcore_lib.hpp
examples/C_Cpp/lib_tlkcore_cpp/src/: tlkcore_lib.cpp
examples/C_Cpp/lib_usrp_spi/: README.md
examples/LabVIEW/: README.md
examples/LabVIEW/2021_64bit/: TLKCore.lvlps
examples/MATLAB/: README.md  TLKCoreExample.m
examples/Python/: README.md
files/: B2104L001-39_39GHz.csv
files/BeamTable/: Beam_Configuration_B00000000-00_28GHz.json  Beam_Configuration_D2152E038-28_28GHz.json
pre-install/Python/: Setup.bat  requirements.txt
release/: ReleaseNote.html  ReleaseNote.md
windows example/BBoard Series/C#/: README.md
windows example/BBoard Series/MatLab/: main.m
windows example/BBoxLite Series/LabVIEW/: BBoxLite.aliases  BBoxLite.lvproj  BBoxLite.vi  BeamTableEditor.vi
windows example/BBoxLite Series/Python/: BBoxLite_ChannelControl_DEMO.py
windows example/BBoxOne Series/C#/: README.md
windows example/BBoxOne Series/LabVIEW/: BBoxOne.vi  BBoxOneLabViewTest.lvproj  BeamTableEditor.vi  FastBeamMode.vi
windows example/UDBox/LabVIEW/: UDBox5G.lvproj  UDBox5G.vi
(+369 files in other folders)
